Build structure of the Homepage

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
       content="The portfolio page for Jacob Rochford, including samples and contact information."
     />
     <meta property="og:title" content="Jacob Rochford's Portfolio" />
-    <meta property="og:description" content="The portfolio page for Jacob Rochford, including samples and contact information." />
+    <meta
+      property="og:description"
+      content="The portfolio page for Jacob Rochford, including samples and contact information."
+    />
 
     <meta property="og:url" content="https://jacobrochford.azurewebsites.net" />
-    <link rel="canonical" href="https://jacobrochford.azurewebsites.net">
+    <link rel="canonical" href="https://jacobrochford.azurewebsites.net" />
 
-    <meta property="og:image" content="https://jacobrochford.azurewebsites.net/img/ME.png" />
-    <meta property="og:image:alt" content="Jacob Rochford sitting at his desk." />
+    <meta
+      property="og:image"
+      content="https://jacobrochford.azurewebsites.net/img/ME.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="Jacob Rochford sitting at his desk."
+    />
 
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
@@ -27,11 +36,36 @@
     <link rel="stylesheet" href="css/site.css" />
   </head>
   <body>
-    <header></header>
     <main>
-      <h1>My Portfolio</h1>
+      <div class="hero">
+        <h1>Hi, I'm Jacob</h1>
+        <img src="img/ME2.png" alt="A picture of me at my computer desk." />
+      </div>
+      <div id="contact-me">
+        <h2>This is how to contact me</h2>
+        <a href="">Use this form</a>
+      </div>
+      <div id="portfolio-section">
+        <div>
+          <h2>This is some of my work</h2>
+          <a href="portfolio.html">see more</a>
+        </div>
+        <img
+          src="img/LandingPageCollage.png"
+          alt="My portfolio collage, including images of my adoption campaign, restaurant site, and kids sports site."
+        />
+      </div>
+      <div id="my-story">
+        <h2>This is my story</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error sunt rerum, maiores, quod ut necessitatibus aspernatur ab labore assumenda dignissimos ipsa ex eius architecto, nobis officia dolores beatae laborum nulla?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus necessitatibus provident atque aliquid, dolor quae optio dolores tempore excepturi unde.
+        </p>
+      </div>
     </main>
-    <footer></footer>
+    <footer>&copy; This is a copyright statement. 2021.</footer>
     <script src="js/app.js"></script>
     <script></script>
   </body>
