Build Contact Form

--- a/index.html
+++ b/index.html
@@ -43,7 +43,25 @@
       </div>
       <div id="contact-me">
         <h2>This is how to contact me</h2>
-        <a href="">Use this form</a>
+        <!-- <a href="">Use this form</a> -->
+      <form id="contact-form" action="" method="post">
+          <div>
+              <label for="name">Name: </label>
+              <input id="name" type="text" name="name" required>
+          </div>
+          <div>
+              <label for="email">Email: </label>
+              <input id="email" type="email" name="email" required>
+          </div>
+          <div>
+              <label for="message">Message: </label>
+              <textarea id="message" name="message" cols="30" rows="10" required></textarea>
+          </div>
+          <div>
+              <button type="submit">Contact Jacob</button>
+              <button type="reset">Clear</button>
+          </div>
+      </form>
       </div>
       <div id="portfolio-section">
         <div>
