--- a/workitem.html
+++ b/workitem.html
@@ -27,11 +27,91 @@
     <link rel="stylesheet" href="css/site.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="workitem.html?item=1">Item #1</a></li>
+                <li><a href="workitem.html?item=2">Item #2</a></li>
+                <li><a href="workitem.html?item=3">Item #3</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-      <h1>My Portfolio</h1>
+        <h2>01. Kids Sports Website</h2>
+        <img src="img/KidsSportsWebsiteFull.jpg" alt="">
+        <div>
+            <h3>The Project</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eos harum eius alias totam recusandae veritatis nulla itaque error modi.
+            </p>
+        </div>
+        <div>
+            <h3>The Technologies</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>C#</li>
+            </ul>
+        </div>
+        <div>
+            <h3>The Challenges</h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis tenetur beatae ducimus a praesentium ipsa enim nam, est sed autem.
+            </p>
+        </div>
+        <h2>02. Pet Adoption Campaign</h2>
+        <img src="img/PetAdoptionCampaignFull.jpg" alt="">
+        <div>
+            <h3>The Project</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit labore aut officiis ullam consequuntur doloremque quaerat cupiditate similique nostrum sapiente.
+            </p>
+        </div>
+        <div>
+            <h3>The Technologies</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>C#</li>
+            </ul>
+        </div>
+        <div>
+            <h3>The Challenges</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea veniam cupiditate at neque nobis labore totam. Vitae, accusamus expedita.
+            </p>
+        </div>
+        <h2>03. Pub Website</h2>
+        <img src="img/PubWebsiteFull.jpg" alt="">
+        <div>
+            <h3>The Project</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit labore aut officiis ullam consequuntur doloremque quaerat cupiditate similique nostrum sapiente.
+            </p>
+        </div>
+        <div>
+            <h3>The Technologies</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>C#</li>
+            </ul>
+        </div>
+        <div>
+            <h3>The Challenges</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea veniam cupiditate at neque nobis labore totam. Vitae, accusamus expedita.
+            </p>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        &copy; 2021 by Jacob Rochford.
+    </footer>
     <script src="js/app.js"></script>
     <script></script>
   </body>
