--- a/workitem.html
+++ b/workitem.html
@@ -39,15 +39,15 @@
         </nav>
     </header>
     <main>
-        <h2>01. Kids Sports Website</h2>
-        <img src="img/KidsSportsWebsiteFull.jpg" alt="">
-        <div>
+        <h2 id="work-item-header">01. Kids Sports Website</h2>
+        <img id="work-item-image" src="img/KidsSportsWebsiteFull.jpg" alt="">
+        <div id="project-text" class="work-item-text">
             <h3>The Project</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eos harum eius alias totam recusandae veritatis nulla itaque error modi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam provident enim obcaecati voluptatem deleniti iusto accusantium temporibus natus, deserunt dignissimos numquam dolorem maxime officiis cumque minima earum ipsa eum distinctio?
             </p>
         </div>
-        <div>
+        <div id="technologies-text" class="work-item-text">
             <h3>The Technologies</h3>
             <ul>
                 <li>HTML</li>
@@ -56,21 +56,21 @@
                 <li>C#</li>
             </ul>
         </div>
-        <div>
+        <div id="challenges-text" class="work-item-text">
             <h3>The Challenges</h3>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis tenetur beatae ducimus a praesentium ipsa enim nam, est sed autem.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam assumenda vel numquam soluta provident explicabo fuga nobis tempora molestias debitis? Exercitationem, ratione provident! Error rerum voluptates quia assumenda alias magni.
             </p>
         </div>
-        <h2>02. Pet Adoption Campaign</h2>
+        <!-- <h2>02. Pet Adoption Campaign</h2>
         <img src="img/PetAdoptionCampaignFull.jpg" alt="">
-        <div>
+        <div id="project-text" class="work-item-text">
             <h3>The Project</h3>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit labore aut officiis ullam consequuntur doloremque quaerat cupiditate similique nostrum sapiente.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate facilis, praesentium reprehenderit eaque nihil asperiores consequatur pariatur natus atque dolor, ad nostrum. Cupiditate, rerum repellat eveniet rem ea nulla totam.
             </p>
         </div>
-        <div>
+        <div id="technologies-text" class="work-item-text">
             <h3>The Technologies</h3>
             <ul>
                 <li>HTML</li>
@@ -79,21 +79,21 @@
                 <li>C#</li>
             </ul>
         </div>
-        <div>
+        <div id="challenges-text" class="work-item-text">
             <h3>The Challenges</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea veniam cupiditate at neque nobis labore totam. Vitae, accusamus expedita.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga exercitationem sit sed non dolorem excepturi repudiandae molestias maxime quam, quia voluptate. Perferendis hic dolores alias perspiciatis! Illo dolore voluptatum modi?
             </p>
         </div>
         <h2>03. Pub Website</h2>
         <img src="img/PubWebsiteFull.jpg" alt="">
-        <div>
+        <div id="project-text" class="work-item-text">
             <h3>The Project</h3>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit labore aut officiis ullam consequuntur doloremque quaerat cupiditate similique nostrum sapiente.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor nesciunt illo cum laboriosam ut ratione eum voluptatibus. Temporibus totam explicabo, assumenda reiciendis iste natus, laboriosam quae aperiam inventore, voluptatum minima.
             </p>
         </div>
-        <div>
+        <div id="technologies-text" class="work-item-text">
             <h3>The Technologies</h3>
             <ul>
                 <li>HTML</li>
@@ -102,12 +102,12 @@
                 <li>C#</li>
             </ul>
         </div>
-        <div>
+        <div id="challenges-text" class="work-item-text">
             <h3>The Challenges</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea veniam cupiditate at neque nobis labore totam. Vitae, accusamus expedita.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae dignissimos similique, alias odio molestias dolorum eveniet provident fugit quisquam nam autem doloremque reprehenderit nihil ipsa a non asperiores labore libero!
             </p>
-        </div>
+        </div> -->
     </main>
     <footer>
         &copy; 2021 by Jacob Rochford.
