Add dynamic copyright year

--- a/workitem.html
+++ b/workitem.html
@@ -110,9 +110,11 @@
         </div> -->
     </main>
     <footer>
-        &copy; 2021 by Jacob Rochford.
+        &copy; <span id="copyrightYear">2021</span> by Jacob Rochford.
     </footer>
     <script src="js/app.js"></script>
-    <script></script>
+    <script>
+        app.workitempage();
+    </script>
   </body>
 </html>
