--- a/index.html
+++ b/index.html
@@ -38,30 +38,27 @@
   <body>
     <main>
       <div class="hero">
-        <h1>Hi, I'm Jacob</h1>
-        <img src="img/ME2.png" alt="A picture of me at my computer desk." />
+        <h1>
+          Hi, I'm<br />
+          Jacob
+        </h1>
+        <img src="img/Me5.png" alt="A picture of me at my computer desk." />
       </div>
       <div id="contact-me">
         <h2>This is how to contact me</h2>
         <!-- <a href="">Use this form</a> -->
-      <form id="contact-form" action="" method="post">
+        <form id="contact-form" action="" method="post">
+          <label for="name">Name: </label>
+          <input id="name" type="text" name="name" required />
+          <label for="email">Email: </label>
+          <input id="email" type="email" name="email" required />
+          <label for="message">Message: </label>
+          <textarea id="message" name="message" rows="10" required></textarea>
           <div>
-              <label for="name">Name: </label>
-              <input id="name" type="text" name="name" required>
+            <button type="submit">Contact Jacob</button>
+            <button type="reset">Clear</button>
           </div>
-          <div>
-              <label for="email">Email: </label>
-              <input id="email" type="email" name="email" required>
-          </div>
-          <div>
-              <label for="message">Message: </label>
-              <textarea id="message" name="message" cols="30" rows="10" required></textarea>
-          </div>
-          <div>
-              <button type="submit">Contact Jacob</button>
-              <button type="reset">Clear</button>
-          </div>
-      </form>
+        </form>
       </div>
       <div id="portfolio-section">
         <div>
@@ -76,15 +73,22 @@
       <div id="my-story">
         <h2>This is my story</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error sunt rerum, maiores, quod ut necessitatibus aspernatur ab labore assumenda dignissimos ipsa ex eius architecto, nobis officia dolores beatae laborum nulla?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error sunt
+          rerum, maiores, quod ut necessitatibus aspernatur ab labore assumenda
+          dignissimos ipsa ex eius architecto, nobis officia dolores beatae
+          laborum nulla?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus necessitatibus provident atque aliquid, dolor quae optio dolores tempore excepturi unde.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
+          necessitatibus provident atque aliquid, dolor quae optio dolores
+          tempore excepturi unde.
         </p>
       </div>
     </main>
-    <footer>&copy; This is a copyright statement. 2021.</footer>
+    <footer>&copy; <span id="copyrightYear">2021</span> by Jacob Rochford.</footer>
     <script src="js/app.js"></script>
-    <script></script>
+    <script>
+        app.homepage();
+    </script>
   </body>
 </html>
