--- a/workitem.html
+++ b/workitem.html
@@ -47,7 +47,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam provident enim obcaecati voluptatem deleniti iusto accusantium temporibus natus, deserunt dignissimos numquam dolorem maxime officiis cumque minima earum ipsa eum distinctio?
             </p>
         </div>
-        <div id="technologies-text" class="work-item-text">
+        <div id="technologies-list" class="work-item-text">
             <h3>The Technologies</h3>
             <ul>
                 <li>HTML</li>
@@ -114,7 +114,7 @@
     </footer>
     <script src="js/app.js"></script>
     <script>
-        app.workitempage();
+        app.workItem();
     </script>
   </body>
 </html>
