--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     <link rel="stylesheet" href="css/site.css" />
   </head>
   <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="workitem.html?item=1">Item #1</a></li>
+                <li><a href="workitem.html?item=2">Item #2</a></li>
+                <li><a href="workitem.html?item=3">Item #3</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
       <div class="hero">
         <h1>
