Add dynamic copyright to page

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,11 +62,11 @@
         </div>
     </main>
     <footer>
-        &copy; <span id="copyrightYear">2021</span> by Jacob Rochford
+        &copy; <span id="copyrightYear">2021</span> by Jacob Rochford.
     </footer>
     <script src="js/app.js"></script>
     <script>
-        app.portfoliopage();
+        app.portfolio();
     </script>
   </body>
 </html>
