--- a/index.html
+++ b/index.html
@@ -37,15 +37,21 @@
   </head>
   <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="workitem.html?item=1">Item #1</a></li>
-                <li><a href="workitem.html?item=2">Item #2</a></li>
-                <li><a href="workitem.html?item=3">Item #3</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="work-item-nav">
+            <a href="workitem.html?item=1">Item #1</a>
+          </li>
+          <li class="work-item-nav">
+            <a href="workitem.html?item=2">Item #2</a>
+          </li>
+          <li class="work-item-nav">
+            <a href="workitem.html?item=3">Item #3</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
       <div class="hero">
@@ -96,10 +102,12 @@
         </p>
       </div>
     </main>
-    <footer>&copy; <span id="copyrightYear">2021</span> by Jacob Rochford.</footer>
+    <footer>
+      &copy; <span id="copyrightYear">2021</span> by Jacob Rochford.
+    </footer>
     <script src="js/app.js"></script>
     <script>
-        app.homepage();
+      app.homepage();
     </script>
   </body>
 </html>
