--- a/workitem.html
+++ b/workitem.html
@@ -9,13 +9,28 @@
       content="A sample of Jacob Rochford's portfolio of recent work."
     />
     <meta property="og:title" content="Jacob Rochford's Portfolio" />
-    <meta property="og:description" content="A sample of Jacob Rochford's portfolio of recent work." />
+    <meta
+      property="og:description"
+      content="A sample of Jacob Rochford's portfolio of recent work."
+    />
 
-    <meta property="og:url" content="https://jacobrochford.azurewebsites.net/workitem.html" />
-    <link rel="canonical" href="https://jacobrochford.azurewebsites.net/workitem.html">
+    <meta
+      property="og:url"
+      content="https://jacobrochford.azurewebsites.net/workitem.html"
+    />
+    <link
+      rel="canonical"
+      href="https://jacobrochford.azurewebsites.net/workitem.html"
+    />
 
-    <meta property="og:image" content="https://jacobrochford.azurewebsites.net/img/ME.png" />
-    <meta property="og:image:alt" content="Jacob Rochford sitting at his desk." />
+    <meta
+      property="og:image"
+      content="https://jacobrochford.azurewebsites.net/img/ME.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="Jacob Rochford sitting at his desk."
+    />
 
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
@@ -28,41 +43,53 @@
   </head>
   <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="workitem.html?item=1">Item #1</a></li>
-                <li><a href="workitem.html?item=2">Item #2</a></li>
-                <li><a href="workitem.html?item=3">Item #3</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="work-item-nav">
+            <a href="workitem.html?item=1">Item #1</a>
+          </li>
+          <li class="work-item-nav">
+            <a href="workitem.html?item=2">Item #2</a>
+          </li>
+          <li class="work-item-nav">
+            <a href="workitem.html?item=3">Item #3</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <h2 id="work-item-header">01. Kids Sports Website</h2>
-        <img id="work-item-image" src="img/KidsSportsWebsiteFull.jpg" alt="">
-        <div id="project-text" class="work-item-text">
-            <h3>The Project</h3>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam provident enim obcaecati voluptatem deleniti iusto accusantium temporibus natus, deserunt dignissimos numquam dolorem maxime officiis cumque minima earum ipsa eum distinctio?
-            </p>
-        </div>
-        <div id="technologies-list" class="work-item-text">
-            <h3>The Technologies</h3>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>C#</li>
-            </ul>
-        </div>
-        <div id="challenges-text" class="work-item-text">
-            <h3>The Challenges</h3>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam assumenda vel numquam soluta provident explicabo fuga nobis tempora molestias debitis? Exercitationem, ratione provident! Error rerum voluptates quia assumenda alias magni.
-            </p>
-        </div>
-        <!-- <h2>02. Pet Adoption Campaign</h2>
+      <h2 id="work-item-header">01. Kids Sports Website</h2>
+      <img id="work-item-image" src="img/KidsSportsWebsiteFull.jpg" alt="" />
+      <div id="project-text" class="work-item-text">
+        <h3>The Project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+          provident enim obcaecati voluptatem deleniti iusto accusantium
+          temporibus natus, deserunt dignissimos numquam dolorem maxime officiis
+          cumque minima earum ipsa eum distinctio?
+        </p>
+      </div>
+      <div id="technologies-list" class="work-item-text">
+        <h3>The Technologies</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>C#</li>
+        </ul>
+      </div>
+      <div id="challenges-text" class="work-item-text">
+        <h3>The Challenges</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam
+          assumenda vel numquam soluta provident explicabo fuga nobis tempora
+          molestias debitis? Exercitationem, ratione provident! Error rerum
+          voluptates quia assumenda alias magni.
+        </p>
+      </div>
+      <!-- <h2>02. Pet Adoption Campaign</h2>
         <img src="img/PetAdoptionCampaignFull.jpg" alt="">
         <div id="project-text" class="work-item-text">
             <h3>The Project</h3>
@@ -110,11 +137,11 @@
         </div> -->
     </main>
     <footer>
-        &copy; <span id="copyrightYear">2021</span> by Jacob Rochford.
+      &copy; <span id="copyrightYear">2021</span> by Jacob Rochford.
     </footer>
     <script src="js/app.js"></script>
     <script>
-        app.workItem();
+      app.workItem();
     </script>
   </body>
 </html>
